Fix horizontal scroll of active users

--- a/src/Components/ActivePeople/styles.scss
+++ b/src/Components/ActivePeople/styles.scss
@@ -1,6 +1,7 @@
 .active-people {
   display: flex;
   gap: 0.5em;
+  list-style-type: none;
   align-items: center;
   white-space: nowrap;
   padding-left: 0.75em;
@@ -10,6 +11,7 @@
   width: 100%;
   max-width: 100%;
   overflow-x: scroll;
+  overflow-y: hidden;
   scroll-snap-type: x mandatory;
   position: relative;
   @media (min-width: 1400px) {
@@ -18,7 +20,7 @@
   &::-webkit-scrollbar {
     display: none;
   }
-  &>.avatar {
+  &>li {
     flex-shrink: 0;
     scroll-snap-align: center;
     display: inline-block;
